# codelens

./: .gitignore  .llmclignore  CHANGELOG.md  README.md  environment.yml  precommit.result  pyproject.toml  pytest.ini  setup.cfg
.codelens/: analysis.txt
scripts/: install-hooks.py  pre-commit.py
src/codelens/: __init__.py  cli.py
src/codelens/processors/: insights.py
src/llm_code_lens/: __init__.py  cli.py  menu.py  utils.py  version.py
src/llm_code_lens/analyzer/: __init__.py  base.py  config.py  javascript.py  python.py  sql.py
src/llm_code_lens/formatters/: llm.py
src/llm_code_lens/processors/: __init__.py  insights.py  summary.py
src/llm_code_lens/utils/: __init__.py  gitignore.py  tree.py
temp/: sample.sql
tests/: conftest.py  test_analyzer.py  test_cli.py  test_cli_filtering.py  test_formatters.py  test_menu.py  test_menu_drawing.py  test_processors.py
