[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codelens"
version = "0.1.0"
description = "Intelligent code analysis tool for LLM context generation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["code analysis", "llm", "ast", "static analysis"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "isort"]

[project.scripts]
codelens = "codelens.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/codelens"
"Bug Tracker" = "https://github.com/yourusername/codelens/issues"